# llm-chunking

./: .gitignore  README.md  chunker.ipynb  docker-compose.yml  llm-chunking.code-workspace  prototype.ipynb  pyproject.toml
api/: Dockerfile
api/app/: main.py  requirements.txt
api/app/communication/: communication.py
api/app/source/chatter/: conversation_manager.py
api/app/source/indexing/: chunker.py  indexing_manager.py  indexing_tree.py
bot/: Dockerfile  bot.py  pyproject.toml
data/conversations/websites/example-forum/: 20250213_120200_conversation.json
data/faiss_index/: my_index.index
data/websites/en.wikipedia.org_wiki_Brazil/: main_index.index  website_embbed_index3.index
data/websites/en.wikipedia.org_wiki_Brazil/Ruan_f/: conversations.json
data/websites/en.wikipedia.org_wiki_chile/: main_index.index
data/websites/en.wikipedia.org_wiki_chile/1657288716/: conversations.json
data/websites/en.wikipedia.org_wiki_colombia/: website_embbed_index3.index
data/websites/en.wikipedia.org_wiki_peru/: index.index  main_index.index  website_embbed_index.index
notebooks/: indexer.ipynb
src/: __init__.py
src/chatter/: chatter.py  conversation_manager.py
src/indexing/: __init__.py  chunker.py  embedder.py  indexing_manager.py  indexing_tree.py
